--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ PyCharm/.idea
 VSCode/__pycache__
 JupyterNotebook/python_demo-master
 **/__pycache__
+JupyterNotebook/立命馆/Test.zip
+**/.ipynb_checkpoints
